--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Cell Ontology</title>
+    <script
+      defer
+      data-domain="<%= PLAUSIBLE_DATA_DOMAIN %>"
+      src="https://plausible.io/js/plausible.js"
+    ></script>    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
