cleanup craco defautls

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta name="description" content="CELLxGENE Ontology" />
-    <link rel="apple-touch-icon" href="/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -16,6 +14,39 @@
 
     <title>Cell Ontology</title>
     <script defer data-domain="<%= PLAUSIBLE_DATA_DOMAIN %>" src="https://plausible.io/js/plausible.js"></script>
+    <style>
+      body,
+      html,
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6,
+      p,
+      a,
+      li,
+      ul,
+      ol,
+      span,
+      div,
+      input,
+      textarea,
+      button,
+      label,
+      select,
+      option,
+      img,
+      canvas,
+      svg,
+      g,
+      text,
+      tspan,
+      desc,
+      title {
+        font-family: "Roboto Condensed", sans-serif;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
